<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- prefence keys, no translation needed -->
    <string name="pref_commands_mode">pref_commands_mode</string>
    <string name="pref_checksum_mode">pref_checksum_mode</string>
    <string name="pref_commands_ending">pref_commands_ending</string>
    <string name="pref_log_timing">pref_log_timing</string>
    <string name="pref_log_direction">pref_log_direction</string>
    <string name="pref_need_clean">pref_need_clean</string>
    <!-- prefence keys, no translation needed -->

    <string name="app_name">Bluetooth terminal</string>

    <string name="msg_not_connected">not connected</string>
    <string name="msg_connecting">connecting…</string>
    <string name="msg_connected">connected</string>

    <string name="action_bluetooth">on/off</string>
    <string name="no_bt_support">Your device doesn\'t support bluetooth.</string>
    <string name="empty_device_name">&lt;New device&gt;</string>

    <string name="menu_send">Send log…</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear">Clear history</string>

    <string name="select_device">Select device</string>
    <string name="search_message">Search for devices…</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="none_paired">No paired devices</string>
    <string name="none_found">Not found</string>
    <string name="command_hint">Enter command here</string>
    <string name="button_send">Send</string>

    <!-- Настройки -->
    <string name="log_settings_category">Command history:</string>

    <string name="log_time">Time</string>
    <string name="log_time_summary">Show time in log</string>
    <string name="log_direction">Direction</string>
    <string name="log_direction_summary">Show I/O direction in log</string>

    <string name="commands_mode">Input mode:</string>
    <string name="checksum_mode">Checksum</string>
    <string name="checksum_mode_summary">Add checksum to command</string>
    <string name="commands_mode_summary">Select input mode</string>
    <string name="commands_ending_summary">Select ending</string>

    <string name="need_clean">Clear previous command</string>
    <string name="need_clean_summary">Cleanup command view after sending</string>
    <string name="title_activity_vibro_matrix">VibroMatrixActivity</string>

<!-- Telegram -->

    <string name="action_search">Search</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="your_phone">Your phone</string>
    <string name="photos">Photos</string>
    <string name="select_file">Select File</string>
    <string name="your_code">Your code</string>
    <string name="choose_country">Choose a country</string>

    <string name="text_choose_country">Choose a country</string>
    <string name="text_user_info">We will send an SMS with a confirmation code to your number</string>
    <string name="clear_history_menu">Clear history</string>
    <string name="delete_chat_menu">Delete chat</string>
    <string name="mute_notification_menu">Mute notification</string>
    <string name="logout_navigation_item">Log Out</string>
    <string name="action_ok">action_ok</string>
    <string name="set_first_last_name">Set your first and last name</string>
    <string name="first_name_hint">First name (required)</string>
    <string name="last_name_hint">Last name (optional)</string>
    <string name="cancel_registration">Cancel registration</string>
    <string name="your_name_fragment_title">Your name</string>
    <string name="we_send_phone_number_test">We send on SMS with an activation code to your phone</string>
    <string name="we_call_you_test">We will call to your after 2:00</string>
    <string name="text_take_photo">Take photo</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_video">Video</string>
    <string name="text_file">File</string>
    <string name="text_location">Location</string>
    <string name="text_internal_storage">Internal Storage</string>
    <string name="text_root">/</string>
    <string name="text_system_root">System Root</string>
    <string name="text_mobigram">MobiGram</string>
    <string name="text_to_send_images_without_compression">To send images without compression</string>
    <string name="text_nearest_checkpoints">Nearest checkpoints</string>
    <string name="text_map">Map</string>
    <string name="text_satellite">Satellite</string>
    <string name="text_hybrid">Hybrid</string>
    <string name="text_send_selected_location">Send your current location</string>
    <string name="text_test_mobigram">MobiGram - jkdksafkfsmskjsa</string>
    <string name="text_test_number">100000</string>
    <string name="new_message_fragment_title">New message</string>
    <string name="select_chat_fragment_title">Select chat</string>

    <string name="text_web_search">web search</string>
    <string name="text_find_images">FIND IMAGES</string>
    <string name="text_find_gifs">FIND GIFS</string>
    <string name="text_giphy">giphy</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_send">SEND</string>

    <string name="online">online</string>
    <string name="last_seen">last seen</string>
    <string name="ls_recently">last seen recently</string>
    <string name="ls_week_ago">last seen a week ago</string>
    <string name="ls_month_ago">last seen a month ago</string>
    <string name="no_messages_here">No messages here yet…</string>

    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh…</string>
    <string name="text_no_result">No result</string>
    <string name="share_user_menu_text">Share</string>
    <string name="delete_user_menu_text">Delete</string>
    <string name="block_user_menu_text">Block</string>
    <string name="file_loaded">File loaded.</string>
    <string name="save_to_message">"On your device no programs to open a file of this type. The file is saved to the address "</string>
    <string name="message_context_menu_header">Message</string>
    <string name="message_context_menu_forward">Forward</string>
    <string name="message_context_menu_delete">Delete</string>
    <string name="file_not_found">File not found</string>
    <string name="no_chats_message">No chats here yet…</string>

    <string name="gpsDisabledDialogMessage">Please enable location service on your device and try again</string>
    <string name="cancel_button">Cancel</string>
    <string name="openSettings_button">Open settings</string>
    <string name="photos_number_text_size">14</string>
    <string name="selected_gif_count_text_size">14</string>
    <string name="check_internet_message">Check your internet connection</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="code_digits">0123456789+</string>
    <string name="code_plus">+</string>
    <string name="username_title">Username</string>
    <string name="mobile">Mobile</string>
    <string name="no_internet_toast">No internet connection.\nPlease, check your internet connection and try again</string>
    <string name="private_chat">private</string>
    <string name="goup_chat">group</string>
    <string name="members">" members"</string>
    <string name="title_error">Title error</string>
    <string name="image_processing">Image processing</string>
    <string name="please_wait">Please wait</string>
    <string name="chat_list">chatList</string>
    <string name="loading">Loading</string>
    <string name="error_dialog_title">Error</string>
    <string name="invalid_key">The key is invalid</string>
    <string name="ok_button">OK</string>
    <string name="not_registered_key">The key is not registered in the system</string>
    <string name="unexpected_code">The code is unexpected</string>
    <string name="code_empty">The confirmation code is empty</string>
    <string name="message_dialog_title">Message</string>
    <string name="no_file_manager">You don\'t have any file manager for choosing file</string>
    <string name="first_name_invalid">The first name is invalid</string>
    <string name="flood">The code has been sent to your phone wait little bit please</string>
    <string name="last_name_invalid">The last name is invalid</string>
    <string name="phone_code_empty">The phone code is empty</string>
    <string name="code_expired">The confirmation code has expired</string>
    <string name="code_invalid">The phone code is invalid</string>
    <string name="phone_number_invalid">The phone number is invalid</string>
    <string name="phone_number_in_use">The phone number is already in use</string>
    <string name="phone_number_not_used">The phone number is not yet being used</string>
    <string name="authorization_expired">The authorization has expired</string>
    <string name="authorization_invalidate">The authorization has been invalidated \n</string>
    <string name="user_deleted">The user has been deleted/deactivated</string>
    <string name="we_send_sms_message">"We send on SMS with an activation code to your phone "</string>
    <string name="psease_confirm_phone">Please confirm your country code and enter your phone number.</string>
    <string name="of">" of "</string>
    <string name="message_photo">Photo</string>
    <string name="message_audio">Audio</string>
    <string name="message_contact">Contact</string>
    <string name="message_document">Document</string>
    <string name="message_geopoint">GeoPoint</string>
    <string name="message_sticker">Sticker</string>
    <string name="message_video">Video</string>
    <string name="message_unknown">Unknown</string>
    <string name="forwarded_message_from">"Forwarded message \nFrom "</string>
    <string name="forwarded_message_from_id">"Forwarded message \nFrom ID: "</string>
    <string name="duration">", duration: "</string>
    <string name="unsupported">Unsupported</string>




</resources>